--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,7 +4,8 @@
     "header header"
     "nav main"
     "footer footer";
-    grid-template-rows: 60px 100% 60px;
+    grid-template-rows: 35px 100% 60px;
     grid-template-columns: 2fr 10fr;
     gap: 2px;
+    padding: 5px;
 }
