--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,6 +6,6 @@
     "footer footer";
     grid-template-rows: 35px 100% 60px;
     grid-template-columns: 2fr 10fr;
-    gap: 2px;
     padding: 5px;
+    color: azure;
 }
