--- a/src/SCSS/mixins.scss
+++ b/src/SCSS/mixins.scss
@@ -1,7 +1,7 @@
 @mixin icon_link () {
     display: block;
     padding-left: 3px;
-    color: black;
+    color: #ffa827;
     text-decoration: none;
     transition: 0.2s;
      &:hover {
@@ -25,6 +25,7 @@
 @mixin border_style () {
     border: 1px groove #8745B0;
     border-radius: 10px;
+    background: #1c2128;
 }
 @mixin link_wrapper() {
     display: flex;
