add status component using React hooks

--- a/src/UI/Content/Profile/ProfileContainer.module.scss
+++ b/src/UI/Content/Profile/ProfileContainer.module.scss
@@ -3,3 +3,9 @@
     height: 50px;
     border-radius: 50%;
 }
+.userStatus {
+    margin: 5px;
+    border: 1px groove #8745B0;
+    border-radius: 10px;
+    color: #ffa827;
+}
