--- a/src/UI/Utils/Paginator/Paginator.module.scss
+++ b/src/UI/Utils/Paginator/Paginator.module.scss
@@ -7,5 +7,10 @@
     color: black;
     margin: 3px;
     border-radius: 5px;
-    cursor: pointer;
+    &:hover {
+        cursor: pointer;
+        background-color: #8745B0;
+        color: #ffa827;
+        transition: .2s;
+    }
 }
